# freedom_routing

./: .gitignore  .gitmodules  AI_Pipeline.md  ARCHITECTURE_HIGH_LEVEL.md  Heuristics.md  Makefile  README.md  WRR.py  docker-compose.yml  temp_analysis.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  langchain_server.py  langgraph.json  main.py  pyproject.toml  settings.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/application/dtos/: location.py  manager.py  ticket.py
backend/application/repos/abstract/: static_files.py
backend/application/repos/abstract/location/: address.py  city.py  country.py  office.py  region.py
backend/application/repos/abstract/manager/: manager.py  (+3 more)
backend/application/repos/sqlalchemy/: base.py  static_files.py
backend/core/: enums.py
backend/core/abstract/: repository.py
backend/core/base/: entity.py  mapper.py
backend/core/caching/: enums.py  manager.py
backend/core/dependency_injection/: __init__.py  app_container.py  db_container.py  repository_container.py  service_container.py
backend/domain/location/: entities.py  mappers.py
backend/domain/manager/: entities.py  mappers.py
backend/domain/ticket/: entities.py  mappers.py
backend/infrastructure/db/migrations/: alembic.ini  env.py
backend/infrastructure/db/models/: __init__.py  attachment.py  client_segment.py  gender.py  geoposition.py  manager.py  meta.py  office.py  ticket.py
backend/interfaces/api/: location.py  manager.py  static_files.py  ticket.py
(+89 files in other folders)
