[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "boto3>=1.40.61",
    "botocore>=1.40.61",
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-cli[inmem]>=0.4.12",
    "openai>=2.21.0",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
